# openclaw-memory-explorer

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  chunker.py  db.py  docker-compose.yml  embeddings.py  pyproject.toml
docs/superpowers/plans/: 2026-03-20-memory-explorer.md
static/: index.html
